add ara scrapper, distance/time matrix generator
se agrega un scrapper para las tiendas de Ara en cartagena.
además de esto, se agrega una función que genera la matriz de distancias
y tiempos, dada una lista de ubicaciones inicial.

Adds a scrapper for the Ara store locations in Cartagena.
In addition, adds a function that generates the dsitances and time
matrices, given a list of locations.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+numpy
+beautifulsoup4
+requests
 googlemaps
 ortools
 pony
+pyyaml
 
 # for development only
+data-science-types
 python-language-server
 flake8
+mypy
 pyls-black
 pyls-mypy
+future # for pyls-mypy
+importmagic
+epc
+rope
