redo project setup
Este commit reordena el proyecto y la forma recomendada de instalarlo.
Con la intención de ofrecer completitud, se incluyen los archivos
empleados por mí para el setup, y se incluirán instrucciones para
desplegarlo de la misma forma.

--- a/.gitignore
+++ b/.gitignore
@@ -142,11 +142,13 @@ cython_debug/
 media
 static
 
+### ### ### CUSTOM
+
 # custom for this project
 secrets.yaml
 .nix-gc-roots
 .direnv
-.envrc
+# .envrc
 assets/*
 
 **/.directory
