--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-numpy
-beautifulsoup4
-requests
-googlemaps
-ortools
-pony
-pyyaml
-
-# for development only
-data-science-types
-python-language-server
-flake8
-mypy
-pyls-black
-pyls-mypy
-future # for pyls-mypy
-importmagic
-epc
-rope
+beautifulsoup4==4.9.3
+certifi==2020.6.20
+chardet==3.0.4
+cycler==0.10.0
+data-science-types==0.2.19
+googlemaps==4.4.2
+idna==2.10
+kiwisolver==1.3.1
+matplotlib==3.3.2
+numpy==1.19.4
+ortools==8.0.8283
+Pillow==8.0.1
+pony==0.7.13
+protobuf==3.13.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+PyYAML==5.3.1
+requests==2.24.0
+six==1.15.0
+soupsieve==2.0.1
+urllib3==1.25.11
