--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,35 @@
+absl-py==0.13.0
+amply==0.1.4
 beautifulsoup4==4.9.3
-certifi==2020.6.20
-chardet==3.0.4
+certifi==2020.12.5
+charset-normalizer==2.0.3
 cycler==0.10.0
-data-science-types==0.2.19
-googlemaps==4.4.2
-idna==2.10
+data-science-types==0.2.23
+docutils==0.16
+googlemaps==4.4.7
 kiwisolver==1.3.1
-matplotlib==3.3.2
-numpy==1.19.4
-ortools==8.0.8283
-Pillow==8.0.1
-pony==0.7.13
-protobuf==3.13.0
+matplotlib==3.4.1
+mock==4.0.3
+numpy==1.20.2
+olefile==0.46
+ortools==9.0.9048
+ortools-stubs==8.0.0
+pbr==5.5.1
+Pillow==8.2.0
+pip==20.2.3
+pony==0.7.14
+protobuf==3.17.3
+PuLP==2.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
-PyYAML==5.3.1
-requests==2.24.0
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.26.0
+setuptools==49.2.1
 six==1.15.0
-soupsieve==2.0.1
-urllib3==1.25.11
+soupsieve==2.2.1
+tornado==6.1
+types-beautifulsoup4==4.9.0
+types-PyYAML==5.4.3
+types-requests==2.25.0
+urllib3==1.26.6
