--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@ charset-normalizer==2.0.3
 cycler==0.10.0
 data-science-types==0.2.23
 docutils==0.16
+geojson==2.5.0
+gmaps==0.9.0
 googlemaps==4.4.7
+ipywidgets==7.6.5
+jupyterlab-widgets==1.0.2
 kiwisolver==1.3.1
 matplotlib==3.4.1
 mock==4.0.3
@@ -33,3 +37,4 @@ types-beautifulsoup4==4.9.0
 types-PyYAML==5.4.3
 types-requests==2.25.0
 urllib3==1.26.6
+widgetsnbextension==3.5.1
