--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
-use_nix
+use_flake
 layout python
 export PYTHONPATH="$VIRTUAL_ENV/lib/python3.7/site-packages:$PYTHONPATH"
 PATH_add assets/COIN-OR/bin
